--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <body>
     <!-- header -->
     <header class="py-[46px]">
-      <div class="max-w-[1680px] container">
+      <div class="container max-w-[1680px]">
         <div class="flex items-center justify-between">
           <!-- logo -->
           <a href="index.html" class="flex items-center gap-4">
@@ -68,6 +68,51 @@
       </div>
     </header>
 
+    <!-- hero -->
+    <section class="py-[88px]">
+      <div class="container max-w-[1354px] mb-[136px]">
+        <p class="text-[112px] font-bold text-center">
+          <span class="block !leading-[168px]">Own your audience.</span>
+          <span
+            style="-webkit-text-fill-color: transparent"
+            class="block bg-clip-text bg-gradient-to-r from-[#FE6783] to-[#FFBF84] -mt-2 !leading-[119px]"
+            >So you don't lose them.</span
+          >
+        </p>
+      </div>
+
+      <div class="container max-w-[734px]">
+        <p class="text-center text-[40px] leading-[60px] mb-12">
+          Turn your audience into email and text message subscribers.
+        </p>
+
+        <!-- btns -->
+        <div class="flex gap-6 mb-5">
+          <a
+            href="#"
+            class="main-btn w-[313px] rounded-xl text-center capitalize"
+            >Get Started Now</a
+          >
+          <a
+            href="#"
+            class="secondary-btn w-[313px] rounded-xl text-center capitalize"
+            >View A Demo</a
+          >
+        </div>
+
+        <!-- sub content -->
+        <div class="flex justify-center gap-2.5">
+          <img
+            width="28"
+            height="28"
+            src="./images/dot.svg"
+            alt="dot"
+            class="w-7 h-7"
+          />
+          <p class="text-[25px] leading-[38px] font-bold">1000+</p>
+          <p class="text-brand-gray-600 text-[25px] leading-[38px] font-normal">creators have already started</p>
+        </div>
+      </div>
     </section>
     <!-- js -->
     <script src="./js/main.js"></script>
