add advantages section

--- a/src/index.html
+++ b/src/index.html
@@ -70,9 +70,9 @@
 
     <!-- hero -->
     <section class="py-[88px]">
-      <div class="container max-w-[1354px] mb-[136px]">
+      <div class="container max-w-max w-[1361px] mb-[136px]">
         <p class="text-[112px] font-bold text-center">
-          <span class="block !leading-[168px]">Own your audience.</span>
+          <span class="inline-block !leading-[168px]">Own your audience.</span>
           <span
             style="-webkit-text-fill-color: transparent"
             class="block bg-clip-text bg-gradient-to-r from-[#FE6783] to-[#FFBF84] -mt-2 !leading-[119px]"
@@ -110,10 +110,74 @@
             class="w-7 h-7"
           />
           <p class="text-[25px] leading-[38px] font-bold">1000+</p>
-          <p class="text-brand-gray-600 text-[25px] leading-[38px] font-normal">creators have already started</p>
+          <p class="text-brand-gray-600 text-[25px] leading-[38px] font-normal">
+            creators have already started
+          </p>
         </div>
       </div>
     </section>
+
+    <main>
+      <!-- advantages section -->
+      <section class="pt-[101px] pb-24">
+        <div class="container max-w-[1523px]">
+          <h2 class="text-center mb-14">Why Creators Love Marico</h2>
+          <ul class="grid grid-cols-3 gap-5">
+            <li class="space-y-2.5">
+              <div class="flex items-center justify-center gap-2">
+                <img
+                  width="37"
+                  height="37"
+                  src="./images/smile-emoji.svg"
+                  alt="smile emoji"
+                  class="size-[37px]"
+                />
+                <h3>Reduced Anxiety</h3>
+              </div>
+              <p
+                class="text-brand-gray-600 text-center text-[22px] leading-[33px] font-normal"
+              >
+                Never worry about losing your audience.
+              </p>
+            </li>
+            <li class="space-y-2.5">
+              <div class="flex items-center justify-center gap-2">
+                <img
+                  width="37"
+                  height="37"
+                  src="./images/happy-emoji.svg"
+                  alt="happy emoji"
+                  class="size-[37px]"
+                />
+                <h3>Lower Workload</h3>
+              </div>
+              <p
+                class="text-brand-gray-600 text-center text-[22px] leading-[33px] font-normal"
+              >
+                Just share one link. We'll handle the rest.
+              </p>
+            </li>
+            <li class="space-y-2.5">
+              <div class="flex items-center justify-center gap-2">
+                <img
+                  width="37"
+                  height="37"
+                  src="./images/party-emoji.svg"
+                  alt="party emoji"
+                  class="size-[37px]"
+                />
+                <h3>More Time</h3>
+              </div>
+              <p
+                class="text-brand-gray-600 text-center text-[22px] leading-[33px] font-normal"
+              >
+                Spend less time on marketing tools
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
     <!-- js -->
     <script src="./js/main.js"></script>
   </body>
