add connect content section

--- a/src/index.html
+++ b/src/index.html
@@ -88,14 +88,12 @@
 
         <!-- btns -->
         <div class="flex gap-6 mb-5">
-          <a
-            href="#"
-            class="main-btn w-[313px] rounded-xl text-center capitalize"
+          <a href="#" class="main-btn w-313 rounded-xl text-center capitalize"
             >Get Started Now</a
           >
           <a
             href="#"
-            class="secondary-btn w-[313px] rounded-xl text-center capitalize"
+            class="secondary-btn w-313 rounded-xl text-center capitalize"
             >View A Demo</a
           >
         </div>
@@ -175,6 +173,25 @@
               </p>
             </li>
           </ul>
+        </div>
+      </section>
+
+      <!-- connect content section -->
+      <section class="pt-14 pb-24">
+        <div class="container max-w-[969px]">
+          <div class="text-center">
+            <p class="step">STEP 1</p>
+            <h2 class="-mb-2">Connect Your Content</h2>
+            <p
+              class="text-brand-gray-600 text-[30px] leading-[45px] font-normal mb-8"
+            >
+              Bring all of your content together and get a Homepage that
+              automatically updates whenever you create anywhere online.
+            </p>
+            <a href="#" class="secondary-btn inline-block w-313 text-center"
+              >View Avaliable Sources</a
+            >
+          </div>
         </div>
       </section>
     </main>
