add user homepage section

--- a/src/index.html
+++ b/src/index.html
@@ -81,6 +81,7 @@
         </p>
       </div>
 
+      <!-- hero sub content -->
       <div class="container max-w-[734px]">
         <p class="text-center text-[40px] leading-[60px] mb-12">
           Turn your audience into email and text message subscribers.
@@ -99,7 +100,7 @@
         </div>
 
         <!-- sub content -->
-        <div class="flex justify-center gap-2.5">
+        <div class="flex items-center justify-center gap-2.5">
           <img
             width="28"
             height="28"
@@ -115,6 +116,7 @@
       </div>
     </section>
 
+    <!-- main -->
     <main>
       <!-- advantages section -->
       <section class="pt-[101px] pb-24">
@@ -177,7 +179,7 @@
       </section>
 
       <!-- connect content section -->
-      <section class="pt-14 pb-24">
+      <section class="pt-16 pb-24">
         <div class="container max-w-[969px]">
           <div class="text-center">
             <p class="step">STEP 1</p>
@@ -188,9 +190,83 @@
               Bring all of your content together and get a Homepage that
               automatically updates whenever you create anywhere online.
             </p>
-            <a href="#" class="secondary-btn inline-block w-313 text-center"
+            <a
+              href="#"
+              class="secondary-btn inline-block w-313 rounded-xl text-center"
               >View Avaliable Sources</a
             >
+          </div>
+        </div>
+      </section>
+
+      <!-- user homepage section -->
+      <section class="py-24">
+        <div class="relative">
+          <!-- main content -->
+          <div class="container max-w-[1596px]">
+            <div class="max-w-[547px] mb-7">
+              <p class="text-[30px] leading-[45px] font-medium mb-20">
+                Your Homepage
+              </p>
+              <h2>
+                <span>Your Content. </span>
+                <br />
+                <span class="mr-4">All in</span
+                ><span class="text-brand-blue-500">One Spot</span>
+              </h2>
+            </div>
+
+            <!-- list -->
+            <ol class="space-y-3 mb-14">
+              <li class="flex items-center gap-3">
+                <div
+                  class="flex items-center justify-center size-[33px] bg-[#2D2D2D] rounded-full text-lg leading-[27px]"
+                >
+                  1
+                </div>
+                <span class="text-[23px] leading-[34px] font-normal"
+                  >Bring all of your content together into one homepage.</span
+                >
+              </li>
+              <li class="flex items-center gap-3">
+                <div
+                  class="flex items-center justify-center size-[33px] bg-[#2D2D2D] rounded-full text-lg leading-[27px]"
+                >
+                  2
+                </div>
+                <span class="text-[23px] leading-[34px] font-normal"
+                  >Your page automatically updates whenever you create.</span
+                >
+              </li>
+            </ol>
+
+            <!-- btns -->
+            <div class="flex gap-6">
+              <a href="#" class="main-btn w-[207px] py-4 rounded-xl text-center"
+                >Get Started Now</a
+              >
+              <a
+                href="#"
+                class="secondary-btn w-[207px] py-4 rounded-xl text-center"
+                >View A Demo</a
+              >
+            </div>
+          </div>
+
+          <!-- image wrapper -->
+          <div class="absolute right-0 -top-2 -z-10">
+            <div class="relative">
+              <!-- image -->
+              <img
+                width="820"
+                height="591"
+                src="./images/charlie-puth.jpg"
+                alt="charlie puth"
+                class="w-[820px] h-[591px] z-10 shadow-main"
+              />
+              <!-- restangle -->
+              <div class="absolute right-[189px] -bottom-[124px] -z-10 w-[309px] h-[276px] bg-[#8B8B8B]"></div>
+            </div>
           </div>
         </div>
       </section>
