add share page section

--- a/src/index.html
+++ b/src/index.html
@@ -265,8 +265,24 @@
                 class="w-[820px] h-[591px] z-10 shadow-main"
               />
               <!-- restangle -->
-              <div class="absolute right-[189px] -bottom-[124px] -z-10 w-[309px] h-[276px] bg-[#8B8B8B]"></div>
+              <div
+                class="absolute right-[189px] -bottom-[124px] -z-10 w-[309px] h-[276px] bg-[#8B8B8B]"
+              ></div>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- share -->
+      <section class="py-24">
+        <div class="container max-w-[926px]">
+          <div class="text-center">
+            <p class="step">STEP 2</p>
+            <h2>Share Your Homepage</h2>
+            <p class="text-[30px] leading-[45px] text-brand-gray-600">
+              Share your Wavium homepage link with your followers, and we'll
+              handle the rest.
+            </p>
           </div>
         </div>
       </section>
