--- a/src/index.html
+++ b/src/index.html
@@ -273,7 +273,7 @@
         </div>
       </section>
 
-      <!-- share -->
+      <!-- share step 2 -->
       <section class="py-24">
         <div class="container max-w-[926px]">
           <div class="text-center">
@@ -284,6 +284,58 @@
               handle the rest.
             </p>
           </div>
+        </div>
+      </section>
+
+      <!-- step 2 sub content -->
+      <section class="pt-20 pb-24">
+        <div class="container flex flex-col items-center gap-12 max-w-[1771px]">
+          <!-- main content wrapper -->
+          <div class="grid grid-cols-2 gap-6 w-full">
+            <!-- child 1 -->
+            <div class="relative bg-[#0D0D0D] pt-8 pl-11">
+              <p
+                class="mb-6 text-[30px] leading-[45px] font-normal text-brand-green-500"
+              >
+                One Link
+              </p>
+              <p class="z-20 text-[80px] leading-[120px] font-semibold">
+                <span class="block -mb-7 text-brand-gray-500"
+                  >ALL You Create.</span
+                >
+                <span>One Link</span>
+              </p>
+
+              <!-- img -->
+              <img
+                width="788"
+                height="338"
+                src="./images/mobile.svg"
+                alt="mobile"
+                class="absolute right-0 bottom-0 w-[92.4%] h-auto z-10"
+              />
+            </div>
+            <!-- child 2 -->
+            <div class="bg-[#0D0D0D] pt-8 pl-7 pb-[212px]">
+              <p
+                class="mb-24 text-[30px] leading-[45px] font-normal text-brand-green-500"
+              >
+                Collect Subscribers
+              </p>
+              <p class="text-[80px] leading-[93px] font-bold">
+                <span class="block text-brand-gray-500"
+                  >Emails. <br />
+                  Phone #s.</span
+                >
+                <span class="inline-block">All Yours.</span>
+              </p>
+            </div>
+          </div>
+
+          <!-- button -->
+          <a href="#" class="main-btn inline-block py-5 px-[84px] rounded-xl"
+            >Get Started
+          </a>
         </div>
       </section>
     </main>
