Add the first section of step 3

--- a/src/index.html
+++ b/src/index.html
@@ -273,7 +273,7 @@
         </div>
       </section>
 
-      <!-- share step 2 -->
+      <!-- share (step 2) -->
       <section class="py-24">
         <div class="container max-w-[926px]">
           <div class="text-center">
@@ -336,6 +336,20 @@
           <a href="#" class="main-btn inline-block py-5 px-[84px] rounded-xl"
             >Get Started
           </a>
+        </div>
+      </section>
+
+      <!-- step 3 -->
+      <section class="py-24">
+        <div class="container max-w-[1149px]">
+          <div class="text-center">
+            <p class="step">STEP 3</p>
+            <h2 class="font-medium">Send Emails & Text Messages</h2>
+            <p class="text-[30px] leading-[45px] text-brand-gray-600">
+              No more going through a social platform. Reach and engage your
+              audience directly over email and text massage.
+            </p>
+          </div>
         </div>
       </section>
     </main>
