Add the last section of step 3

--- a/src/index.html
+++ b/src/index.html
@@ -352,6 +352,80 @@
           </div>
         </div>
       </section>
+
+      <!-- user homepage section -->
+      <section class="py-24">
+        <div class="relative">
+          <!-- main content -->
+          <div class="container max-w-[1596px]">
+            <div class="max-w-[547px] mb-7">
+              <p class="text-[30px] leading-[45px] font-medium mb-20">
+                Create & Share
+              </p>
+              <h2>
+                <span>Reach Your </span>
+                <br />
+                <span class="mr-5">Audience</span
+                ><span class="text-brand-blue-500">Directly</span>
+              </h2>
+            </div>
+
+            <!-- list -->
+            <ol class="space-y-3 mb-14">
+              <li class="flex items-center gap-3">
+                <div
+                  class="flex items-center justify-center size-[33px] bg-[#2D2D2D] rounded-full text-lg leading-[27px]"
+                >
+                  1
+                </div>
+                <span class="text-[23px] leading-[34px] font-normal"
+                  >Embed content or create something new to share.</span
+                >
+              </li>
+              <li class="flex items-center gap-3">
+                <div
+                  class="flex items-center justify-center size-[33px] bg-[#2D2D2D] rounded-full text-lg leading-[27px]"
+                >
+                  2
+                </div>
+                <span class="text-[23px] leading-[34px] font-normal"
+                  >Share content over email, text message or your homepage.</span
+                >
+              </li>
+            </ol>
+
+            <!-- btns -->
+            <div class="flex gap-6">
+              <a href="#" class="main-btn w-[207px] py-4 rounded-xl text-center"
+                >Get Started Now</a
+              >
+              <a
+                href="#"
+                class="secondary-btn w-[207px] py-4 rounded-xl text-center"
+                >View A Demo</a
+              >
+            </div>
+          </div>
+
+          <!-- image wrapper -->
+          <div class="absolute right-0 -top-2 -z-10">
+            <div class="relative">
+              <!-- image -->
+              <img
+                width="820"
+                height="591"
+                src="./images/blackpink.jpg"
+                alt="charlie puth"
+                class="w-[820px] h-[591px] z-10 shadow-secondary"
+              />
+              <!-- restangle -->
+              <div
+                class="absolute right-[189px] -bottom-[124px] -z-10 w-[309px] h-[276px] bg-[#8B8B8B]"
+              ></div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- js -->
     <script src="./js/main.js"></script>
