add experts agree section

--- a/src/index.html
+++ b/src/index.html
@@ -353,7 +353,7 @@
         </div>
       </section>
 
-      <!-- user homepage section -->
+      <!-- step 3last section -->
       <section class="py-24">
         <div class="relative">
           <!-- main content -->
@@ -389,7 +389,8 @@
                   2
                 </div>
                 <span class="text-[23px] leading-[34px] font-normal"
-                  >Share content over email, text message or your homepage.</span
+                  >Share content over email, text message or your
+                  homepage.</span
                 >
               </li>
             </ol>
@@ -424,6 +425,13 @@
               ></div>
             </div>
           </div>
+        </div>
+      </section>
+
+      <section class="py-24">
+        <div class="container max-w-[1866px]">
+          <h2 class="mb-[52px] text-center">Experts Agree</h2>
+          <img width="1826" height="441" src="./images/experts-agree.jpg" alt="experts agree" class="w-full h-auto bg-brand-gray-600 opacity-45" />
         </div>
       </section>
     </main>
