--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
                 <a href="#" class="text-brand-gray-600">About</a>
               </li>
               <li>
-                <a href="#" class="text-brand-gray-600">Pricing</a>
+                <a href="#" class="text-brand-blue-500">Pricing</a>
               </li>
               <li>
                 <a href="#" class="text-brand-gray-600">Blog</a>
@@ -431,10 +431,81 @@
       <section class="py-24">
         <div class="container max-w-[1866px]">
           <h2 class="mb-[52px] text-center">Experts Agree</h2>
-          <img width="1826" height="441" src="./images/experts-agree.jpg" alt="experts agree" class="w-full h-auto bg-brand-gray-600 opacity-45" />
+          <img
+            width="1826"
+            height="441"
+            src="./images/experts-agree.jpg"
+            alt="experts agree"
+            class="w-full h-auto bg-brand-gray-600 opacity-45"
+          />
         </div>
       </section>
     </main>
+
+    <!-- footer -->
+    <footer class="py-24">
+      <div class="container max-w-[1681px]">
+        <div class="flex items-center justify-between">
+          <!-- logo wrapper -->
+          <div class="space-y-0.5">
+            <!-- logo -->
+            <a href="index.html" class="flex items-start gap-6">
+              <img
+                width="47"
+                height="52"
+                src="./images/logo.svg"
+                alt="logo"
+                class="w-[47px] h-[52px]"
+              />
+              <span class="text-[42px] leading-[63px] font-extrabold"
+                >Marico</span
+              >
+            </a>
+
+            <!-- email -->
+            <a
+              href="mailto:info@marico.co"
+              class="text-brand-gray-600 text-[27px] leading-10 font-normal"
+              >info@marico.co</a
+            >
+          </div>
+
+          <!-- nav -->
+          <nav>
+            <ul class="flex items-center gap-11">
+              <li>
+                <a
+                  href="#"
+                  class="text-brand-gray-600 text-[28px] leading-[42px]"
+                  >About</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="text-brand-blue-500 text-[28px] leading-[42px]"
+                  >Pricing</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="text-brand-gray-600 text-[28px] leading-[42px]"
+                  >Blog</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="text-brand-gray-600 text-[28px] leading-[42px]"
+                  >Sign in</a
+                >
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </footer>
     <!-- js -->
     <script src="./js/main.js"></script>
   </body>
