add users section

--- a/src/index.html
+++ b/src/index.html
@@ -440,6 +440,19 @@
           />
         </div>
       </section>
+
+      <section class="py-[82px]">
+        <div
+          class="bg-gray-950 bg-[url(../images/users.jpg)] bg-cover bg-no-repeat bg-center pt-[301px] pb-[288px]"
+        >
+          <div class="container max-w-[1276px]">
+            <h2 class="text-[70px] leading-[105px] text-center">
+              We've helped over 1,000 creatorsre claim control of their
+              audience.
+            </h2>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- footer -->
