add cta section

--- a/src/index.html
+++ b/src/index.html
@@ -455,6 +455,48 @@
       </section>
     </main>
 
+    <!-- cta -->
+    <section class="pt-[106px] pb-[87px]">
+      <div class="container max-w-[920px]">
+        <div class="flex flex-col items-center">
+          <img
+            width="164"
+            height="151"
+            src="./images/logo.svg"
+            alt="logo"
+            class="w-[164px] h-[151px] mb-5"
+          />
+          <h2 class="text-[100px] leading-[150px] font-bold">
+            Get Started Now
+          </h2>
+          <p class="mb-3.5 text-[43px] leading-[63px] font-normal text-center">
+            Setup is easy and takes under 5 minutes.
+          </p>
+          <a
+            href="#"
+            class="main-btn inline-block py-7 px-28 mb-7 text-[30px] leading-[45px] font-semibold rounded-xl"
+            >Get Started Now</a
+          >
+          <!-- sub content -->
+          <div class="flex items-center justify-center gap-2.5">
+            <img
+              width="37"
+              height="37"
+              src="./images/dot.svg"
+              alt="dot"
+              class="size-[37px]"
+            />
+            <p class="text-[38px] leading-[57px] font-bold">1000+</p>
+            <p
+              class="text-brand-gray-600 text-[38px] leading-[57px] font-normal"
+            >
+              creators have already started
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- footer -->
     <footer class="py-24">
       <div class="container max-w-[1681px]">
