advantages section is optimized for all devices

--- a/src/index.html
+++ b/src/index.html
@@ -149,69 +149,69 @@
       </div>
     </section>
 
+    <!-- advantages section -->
+    <section class="py-10 sm:py-16 md:pt-[101px] md:pb-24">
+      <div class="container max-w-[1523px]">
+        <h2 class="text-center mb-14">Why Creators Love Marico</h2>
+        <ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-9 md:gap-7 lg:gap-5">
+          <li class="flex flex-col items-center gap-2.5">
+            <div class="flex items-center justify-center gap-2">
+              <img
+                width="37"
+                height="37"
+                src="./images/smile-emoji.svg"
+                alt="smile emoji"
+                class="size-[37px]"
+              />
+              <h3 class="text-center">Reduced Anxiety</h3>
+            </div>
+            <p
+              class="text-brand-gray-600 text-center text-[22px] leading-[33px] font-normal"
+            >
+              Never worry about losing your audience.
+            </p>
+          </li>
+          <li class="flex flex-col items-center gap-2.5">
+            <div class="flex items-center justify-center gap-2">
+              <img
+                width="37"
+                height="37"
+                src="./images/happy-emoji.svg"
+                alt="happy emoji"
+                class="size-[37px]"
+              />
+              <h3 class="text-center">Lower Workload</h3>
+            </div>
+            <p
+              class="text-brand-gray-600 text-center text-[22px] leading-[33px] font-normal"
+            >
+              Just share one link. We'll handle the rest.
+            </p>
+          </li>
+          <li class="flex flex-col items-center gap-2.5 col-span-1 md:col-span-2 lg:col-span-1">
+            <div class="flex items-center justify-center gap-2">
+              <img
+                width="37"
+                height="37"
+                src="./images/party-emoji.svg"
+                alt="party emoji"
+                class="size-[37px]"
+              />
+              <h3 class="text-center">More Time</h3>
+            </div>
+            <p
+              class="text-brand-gray-600 text-center text-[22px] leading-[33px] font-normal"
+            >
+              Spend less time on marketing tools
+            </p>
+          </li>
+        </ul>
+      </div>
+    </section>
+
     <div class="hidden">
       <!-- main -->
       <main>
-        <!-- advantages section -->
-        <section class="pt-[101px] pb-24">
-          <div class="container max-w-[1523px]">
-            <h2 class="text-center mb-14">Why Creators Love Marico</h2>
-            <ul class="grid grid-cols-3 gap-5">
-              <li class="space-y-2.5">
-                <div class="flex items-center justify-center gap-2">
-                  <img
-                    width="37"
-                    height="37"
-                    src="./images/smile-emoji.svg"
-                    alt="smile emoji"
-                    class="size-[37px]"
-                  />
-                  <h3>Reduced Anxiety</h3>
-                </div>
-                <p
-                  class="text-brand-gray-600 text-center text-[22px] leading-[33px] font-normal"
-                >
-                  Never worry about losing your audience.
-                </p>
-              </li>
-              <li class="space-y-2.5">
-                <div class="flex items-center justify-center gap-2">
-                  <img
-                    width="37"
-                    height="37"
-                    src="./images/happy-emoji.svg"
-                    alt="happy emoji"
-                    class="size-[37px]"
-                  />
-                  <h3>Lower Workload</h3>
-                </div>
-                <p
-                  class="text-brand-gray-600 text-center text-[22px] leading-[33px] font-normal"
-                >
-                  Just share one link. We'll handle the rest.
-                </p>
-              </li>
-              <li class="space-y-2.5">
-                <div class="flex items-center justify-center gap-2">
-                  <img
-                    width="37"
-                    height="37"
-                    src="./images/party-emoji.svg"
-                    alt="party emoji"
-                    class="size-[37px]"
-                  />
-                  <h3>More Time</h3>
-                </div>
-                <p
-                  class="text-brand-gray-600 text-center text-[22px] leading-[33px] font-normal"
-                >
-                  Spend less time on marketing tools
-                </p>
-              </li>
-            </ul>
-          </div>
-        </section>
-
         <!-- connect content section -->
         <section class="pt-16 pb-24">
           <div class="container max-w-[969px]">
