The connect content section is optimized for all devices

--- a/src/index.html
+++ b/src/index.html
@@ -153,7 +153,9 @@
     <section class="py-10 sm:py-16 md:pt-[101px] md:pb-24">
       <div class="container max-w-[1523px]">
         <h2 class="text-center mb-14">Why Creators Love Marico</h2>
-        <ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-9 md:gap-7 lg:gap-5">
+        <ul
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-9 md:gap-7 lg:gap-5"
+        >
           <li class="flex flex-col items-center gap-2.5">
             <div class="flex items-center justify-center gap-2">
               <img
@@ -188,7 +190,9 @@
               Just share one link. We'll handle the rest.
             </p>
           </li>
-          <li class="flex flex-col items-center gap-2.5 col-span-1 md:col-span-2 lg:col-span-1">
+          <li
+            class="flex flex-col items-center gap-2.5 col-span-1 md:col-span-2 lg:col-span-1"
+          >
             <div class="flex items-center justify-center gap-2">
               <img
                 width="37"
@@ -209,32 +213,32 @@
       </div>
     </section>
 
+    <!-- connect content section -->
+    <section class="py-10 sm:pt-12 sm:pb-16 md:pt-16 md:pb-24">
+      <div class="container max-w-[969px]">
+        <div class="text-center">
+          <p class="step">STEP 1</p>
+          <h2 class="mb-3 xl:-mb-2">Connect Your Content</h2>
+          <p
+            class="text-brand-gray-600 text-xl md:text-2xl lg:text-[30px] lg:leading-[45px] font-normal mb-8"
+          >
+            Bring all of your content together and get a Homepage that
+            automatically updates whenever you create anywhere online.
+          </p>
+          <a
+            href="#"
+            class="secondary-btn inline-block w-full sm:w-313 rounded-xl text-center"
+            >View Avaliable Sources</a
+          >
+        </div>
+      </div>
+    </section>
+
     <div class="hidden">
       <!-- main -->
       <main>
-        <!-- connect content section -->
-        <section class="pt-16 pb-24">
-          <div class="container max-w-[969px]">
-            <div class="text-center">
-              <p class="step">STEP 1</p>
-              <h2 class="-mb-2">Connect Your Content</h2>
-              <p
-                class="text-brand-gray-600 text-[30px] leading-[45px] font-normal mb-8"
-              >
-                Bring all of your content together and get a Homepage that
-                automatically updates whenever you create anywhere online.
-              </p>
-              <a
-                href="#"
-                class="secondary-btn inline-block w-313 rounded-xl text-center"
-                >View Avaliable Sources</a
-              >
-            </div>
-          </div>
-        </section>
-
         <!-- user homepage section -->
-        <section class="py-24">
+        <section class="py-10 sm:py-16 md:py-24">
           <div class="relative">
             <!-- main content -->
             <div class="container max-w-[1596px]">
@@ -310,7 +314,7 @@
         </section>
 
         <!-- share (step 2) -->
-        <section class="py-24">
+        <section class="py-10 sm:py-16 md:py-24">
           <div class="container max-w-[926px]">
             <div class="text-center">
               <p class="step">STEP 2</p>
@@ -324,7 +328,7 @@
         </section>
 
         <!-- step 2 sub content -->
-        <section class="pt-20 pb-24">
+        <section class="py-10 sm:py-16 md:pt-20 md:pb-24">
           <div
             class="container flex flex-col items-center gap-12 max-w-[1771px]"
           >
@@ -378,7 +382,7 @@
         </section>
 
         <!-- step 3 -->
-        <section class="py-24">
+        <section class="py-10 sm:py-16 md:py-24">
           <div class="container max-w-[1149px]">
             <div class="text-center">
               <p class="step">STEP 3</p>
@@ -392,7 +396,7 @@
         </section>
 
         <!-- step 3last section -->
-        <section class="py-24">
+        <section class="py-10 sm:py-16 md:py-24">
           <div class="relative">
             <!-- main content -->
             <div class="container max-w-[1596px]">
@@ -468,7 +472,7 @@
           </div>
         </section>
 
-        <section class="py-24">
+        <section class="py-10 sm:py-16 md:py-24">
           <div class="container max-w-[1866px]">
             <h2 class="mb-[52px] text-center">Experts Agree</h2>
             <img
