--- a/src/index.html
+++ b/src/index.html
@@ -234,92 +234,100 @@
       </div>
     </section>
 
+    <!-- user homepage section -->
+    <section class="py-10 sm:py-16 md:py-24">
+      <div class="relative">
+        <!-- main content -->
+        <div
+          class="flex flex-col items-start text-start container max-w-[1596px] sm:items-center sm:text-center xl:items-start xl:text-start"
+        >
+          <div class="max-w-[547px] mb-3 lg:mb-5 xl:mb-7">
+            <p
+              class="text-xl font-medium mb-6 sm:text-xl md:text-2xl lg:text-[30px] lg:leading-[45px] md:mb-8 lg:mb-10 xl:mb-20"
+            >
+              Your Homepage
+            </p>
+            <h2>
+              <span>Your Content. </span>
+              <br />
+              <span class="mr-4">All in</span
+              ><span class="text-brand-blue-500">One Spot</span>
+            </h2>
+          </div>
+
+          <!-- list -->
+          <ol class="space-y-3 mb-8 sm:mb-10 md:mb-14">
+            <li class="flex items-center gap-3">
+              <div
+                class="flex items-center justify-center size-[33px] shrink-0 bg-[#2D2D2D] rounded-full text-base sm:text-lg sm:leading-[27px]"
+              >
+                1
+              </div>
+              <span
+                class="text-lg sm:text-xl md:text-[23px] md:leading-[34px] font-normal"
+                >Bring all of your content together into one homepage.</span
+              >
+            </li>
+            <li class="flex items-center gap-3">
+              <div
+                class="flex items-center justify-center size-[33px] shrink-0 bg-[#2D2D2D] rounded-full text-base sm:text-lg sm:leading-[27px]"
+              >
+                2
+              </div>
+              <span
+                class="text-lg sm:text-xl md:text-[23px] md:leading-[34px] font-normal"
+                >Your page automatically updates whenever you create.</span
+              >
+            </li>
+          </ol>
+
+          <!-- btns -->
+          <div class="flex flex-col justify-center gap-6 w-full sm:flex-row">
+            <a
+              href="#"
+              class="main-btn w-full py-4 rounded-xl text-center sm:w-[207px]"
+              >Get Started Now</a
+            >
+            <a
+              href="#"
+              class="secondary-btn w-full py-4 rounded-xl text-center sm:w-[207px]"
+              >View A Demo</a
+            >
+          </div>
+        </div>
+
+        <!-- image wrapper -->
+        <div class="hidden absolute right-0 -top-2 -z-10 xl:block">
+          <div class="relative">
+            <!-- image -->
+            <img
+              width="820"
+              height="591"
+              src="./images/charlie-puth.jpg"
+              alt="charlie puth"
+              class="w-[820px] h-[591px] z-10 shadow-main"
+            />
+            <!-- restangle -->
+            <div
+              class="absolute right-[189px] -bottom-[124px] -z-10 w-[309px] h-[276px] bg-[#8B8B8B]"
+            ></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <div class="hidden">
       <!-- main -->
       <main>
-        <!-- user homepage section -->
-        <section class="py-10 sm:py-16 md:py-24">
-          <div class="relative">
-            <!-- main content -->
-            <div class="container max-w-[1596px]">
-              <div class="max-w-[547px] mb-7">
-                <p class="text-[30px] leading-[45px] font-medium mb-20">
-                  Your Homepage
-                </p>
-                <h2>
-                  <span>Your Content. </span>
-                  <br />
-                  <span class="mr-4">All in</span
-                  ><span class="text-brand-blue-500">One Spot</span>
-                </h2>
-              </div>
-
-              <!-- list -->
-              <ol class="space-y-3 mb-14">
-                <li class="flex items-center gap-3">
-                  <div
-                    class="flex items-center justify-center size-[33px] bg-[#2D2D2D] rounded-full text-lg leading-[27px]"
-                  >
-                    1
-                  </div>
-                  <span class="text-[23px] leading-[34px] font-normal"
-                    >Bring all of your content together into one homepage.</span
-                  >
-                </li>
-                <li class="flex items-center gap-3">
-                  <div
-                    class="flex items-center justify-center size-[33px] bg-[#2D2D2D] rounded-full text-lg leading-[27px]"
-                  >
-                    2
-                  </div>
-                  <span class="text-[23px] leading-[34px] font-normal"
-                    >Your page automatically updates whenever you create.</span
-                  >
-                </li>
-              </ol>
-
-              <!-- btns -->
-              <div class="flex gap-6">
-                <a
-                  href="#"
-                  class="main-btn w-[207px] py-4 rounded-xl text-center"
-                  >Get Started Now</a
-                >
-                <a
-                  href="#"
-                  class="secondary-btn w-[207px] py-4 rounded-xl text-center"
-                  >View A Demo</a
-                >
-              </div>
-            </div>
-
-            <!-- image wrapper -->
-            <div class="absolute right-0 -top-2 -z-10">
-              <div class="relative">
-                <!-- image -->
-                <img
-                  width="820"
-                  height="591"
-                  src="./images/charlie-puth.jpg"
-                  alt="charlie puth"
-                  class="w-[820px] h-[591px] z-10 shadow-main"
-                />
-                <!-- restangle -->
-                <div
-                  class="absolute right-[189px] -bottom-[124px] -z-10 w-[309px] h-[276px] bg-[#8B8B8B]"
-                ></div>
-              </div>
-            </div>
-          </div>
-        </section>
-
         <!-- share (step 2) -->
         <section class="py-10 sm:py-16 md:py-24">
           <div class="container max-w-[926px]">
             <div class="text-center">
               <p class="step">STEP 2</p>
               <h2>Share Your Homepage</h2>
-              <p class="text-[30px] leading-[45px] text-brand-gray-600">
+              <p
+                class="text-xl sm:text-xl md:text-2xl lg:text-[30px] lg:leading-[45px] text-brand-gray-600"
+              >
                 Share your Wavium homepage link with your followers, and we'll
                 handle the rest.
               </p>
@@ -337,7 +345,7 @@
               <!-- child 1 -->
               <div class="relative bg-[#0D0D0D] pt-8 pl-11">
                 <p
-                  class="mb-6 text-[30px] leading-[45px] font-normal text-brand-green-500"
+                  class="mb-6 text-xl sm:text-xl md:text-2xl lg:text-[30px] lg:leading-[45px] font-normal text-brand-green-500"
                 >
                   One Link
                 </p>
@@ -360,7 +368,7 @@
               <!-- child 2 -->
               <div class="bg-[#0D0D0D] pt-8 pl-7 pb-[212px]">
                 <p
-                  class="mb-24 text-[30px] leading-[45px] font-normal text-brand-green-500"
+                  class="mb-24 text-xl sm:text-xl md:text-2xl lg:text-[30px] lg:leading-[45px] font-normal text-brand-green-500"
                 >
                   Collect Subscribers
                 </p>
@@ -387,7 +395,9 @@
             <div class="text-center">
               <p class="step">STEP 3</p>
               <h2 class="font-medium">Send Emails & Text Messages</h2>
-              <p class="text-[30px] leading-[45px] text-brand-gray-600">
+              <p
+                class="text-xl sm:text-xl md:text-2xl lg:text-[30px] lg:leading-[45px] text-brand-gray-600"
+              >
                 No more going through a social platform. Reach and engage your
                 audience directly over email and text massage.
               </p>
@@ -401,7 +411,9 @@
             <!-- main content -->
             <div class="container max-w-[1596px]">
               <div class="max-w-[547px] mb-7">
-                <p class="text-[30px] leading-[45px] font-medium mb-20">
+                <p
+                  class="text-xl sm:text-xl md:text-2xl lg:text-[30px] lg:leading-[45px] font-medium mb-20"
+                >
                   Create & Share
                 </p>
                 <h2>
@@ -416,21 +428,23 @@
               <ol class="space-y-3 mb-14">
                 <li class="flex items-center gap-3">
                   <div
-                    class="flex items-center justify-center size-[33px] bg-[#2D2D2D] rounded-full text-lg leading-[27px]"
+                    class="flex items-center justify-center size-[33px] shrink-0 bg-[#2D2D2D] rounded-full text-base sm:text-lg sm:leading-[27px]"
                   >
                     1
                   </div>
-                  <span class="text-[23px] leading-[34px] font-normal"
+                  <span
+                    class="text-lg sm:text-xl md:text-[23px] md:leading-[34px] font-normal"
                     >Embed content or create something new to share.</span
                   >
                 </li>
                 <li class="flex items-center gap-3">
                   <div
-                    class="flex items-center justify-center size-[33px] bg-[#2D2D2D] rounded-full text-lg leading-[27px]"
+                    class="flex items-center justify-center size-[33px] shrink-0 bg-[#2D2D2D] rounded-full text-base sm:text-lg sm:leading-[27px]"
                   >
                     2
                   </div>
-                  <span class="text-[23px] leading-[34px] font-normal"
+                  <span
+                    class="text-lg sm:text-xl md:text-[23px] md:leading-[34px] font-normal"
                     >Share content over email, text message or your
                     homepage.</span
                   >
@@ -520,7 +534,7 @@
             </p>
             <a
               href="#"
-              class="main-btn inline-block py-7 px-28 mb-7 text-[30px] leading-[45px] font-semibold rounded-xl"
+              class="main-btn inline-block py-7 px-28 mb-7 text-xl sm:text-xl md:text-2xl lg:text-[30px] lg:leading-[45px] font-semibold rounded-xl"
               >Get Started Now</a
             >
             <!-- sub content -->
